[package]
name = "systemtime-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.7.0-alpha-1" }
okapi = { version = "0.6.0-alpha-1" }
schemars = { version = "0.8", features = ["preserve_order"] }
chrono = "0.4"
async-std = { version = "^1.9", features = ["attributes", "tokio1"] }
is_elevated = "0.1.2"
windows-sys = { version = "0.29.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation"
] }
